<resources>
    <string name="app_name">Pokemons</string>
    <string name="hp">hp</string>
    <string name="defense">defense</string>
    <string name="attack">attack</string>
    <string name="type">type</string>
    <string name="weight">weight</string>
    <string name="height">height</string>
    <string name="click_again_to_exit">click again to exit</string>
    <string name="update">update</string>
</resources>